# minigame

./: Cargo.toml  config.yaml  test.rest  test_websocket.html  test_websocket.py
logs/: error.log.2025-10-17  oxideleap.log.2025-10-17
sql/: init.sql
src/: config.rs  lib.rs  main.rs  types.rs
src/dto/: mod.rs  request.rs  response.rs
src/handlers/: car.rs  friend.rs  mod.rs  player.rs  room.rs  websocket.rs
src/models/: friend.rs  mod.rs  player.rs
