[package]
name = "minigame"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "multipart", "typed-header"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.3.1"
jsonwebtoken = "9.3.1"
log = "0.4.27"
mio = "1.0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shell-escape = "0.1.5"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
termion = "4.0.5"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["full"] }
tokio-fd = "0.3.0"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
